[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/book/BookPanel.gd" type="Script" id=2]
[ext_resource path="res://ui/ThemeProperty.gd" type="Script" id=3]
[ext_resource path="res://ui/book/Book.tscn" type="PackedScene" id=4]

[node name="BookPane" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Book" parent="." instance=ExtResource( 4 )]
margin_right = 1200.0
margin_bottom = 694.0

[node name="State" type="Label" parent="."]
margin_top = 699.0
margin_right = 1200.0
margin_bottom = 768.0
size_flags_vertical = 7
size_flags_stretch_ratio = 0.1

[node name="Lend" type="Button" parent="."]
visible = false
margin_top = 699.0
margin_right = 574.0
margin_bottom = 721.0
text = ".book.lend"

[node name="LendTo" type="Button" parent="."]
visible = false
margin_top = 611.0
margin_right = 602.0
margin_bottom = 633.0
text = ".book.lend.to"

[node name="Renew" type="Button" parent="."]
visible = false
margin_top = 699.0
margin_right = 574.0
margin_bottom = 721.0
text = ".book.renew"

[node name="Reserve" type="Button" parent="."]
visible = false
margin_top = 638.0
margin_right = 602.0
margin_bottom = 660.0
text = ".book.reserve"

[node name="Release" type="Button" parent="."]
visible = false
margin_top = 665.0
margin_right = 602.0
margin_bottom = 687.0
text = ".book.delete-reservation"

[node name="Revoke" type="Button" parent="."]
visible = false
margin_top = 692.0
margin_right = 602.0
margin_bottom = 714.0
text = ".book.revoke"

[node name="Edit" type="Button" parent="."]
margin_top = 773.0
margin_right = 1200.0
margin_bottom = 799.0
text = ".action.edit"

[node name="Editing" type="HBoxContainer" parent="."]
visible = false
margin_top = 717.0
margin_right = 602.0
margin_bottom = 741.0

[node name="Cancel" type="Button" parent="Editing"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
text = ".action.cancel"

[node name="Apply" type="Button" parent="Editing"]
margin_left = 124.0
margin_right = 478.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = ".action.apply"

[node name="Delete" type="Button" parent="Editing"]
margin_left = 482.0
margin_right = 602.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
text = ".action.delete"
script = ExtResource( 3 )
theme_class = "EditorIcons"
theme_name = "Remove"
theme_type = 2
target_property = "icon"

[node name="Adding" type="HBoxContainer" parent="."]
visible = false
margin_top = 719.0
margin_right = 562.0
margin_bottom = 741.0

[node name="Cancel" type="Button" parent="Adding"]
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = ".action.cancel"

[node name="Add" type="Button" parent="Adding"]
margin_left = 124.0
margin_right = 562.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = ".action.add"
[connection signal="pressed" from="Lend" to="." method="_on_lend"]
[connection signal="pressed" from="LendTo" to="." method="_on_lend_to"]
[connection signal="pressed" from="Renew" to="." method="_on_renew"]
[connection signal="pressed" from="Reserve" to="." method="_on_reserve"]
[connection signal="pressed" from="Release" to="." method="_on_release"]
[connection signal="pressed" from="Revoke" to="." method="_on_revoke"]
[connection signal="pressed" from="Edit" to="." method="_on_edit"]
[connection signal="pressed" from="Editing/Cancel" to="." method="_on_edit_cancel"]
[connection signal="pressed" from="Editing/Apply" to="." method="_on_edit_apply"]
[connection signal="pressed" from="Editing/Delete" to="." method="_on_edit_delete"]
[connection signal="pressed" from="Adding/Cancel" to="." method="_on_edit_cancel"]
[connection signal="pressed" from="Adding/Add" to="." method="_on_edit_add"]
